--- a/style.css
+++ b/style.css
@@ -60,11 +60,11 @@ nav ul{
 @media screen and (max-width: 800px){
 	nav ul{
 		position: absolute;
+		overflow-y: auto;
 		margin: 0;
 		padding: 0;
 		left: -90%;
 		width: 55%;
-		
 		flex-direction: column;
 		background-color: rgb(100,100,100);
 		transition: all 0.5s;
@@ -159,7 +159,7 @@ nav ul li a:hover{
 		justify-content: space-between;
 		width: 80%;
 		margin: auto;
-		margin-top: 50px;
+		margin-top: 200px;
 		margin-bottom: 30px;
 	}
 }
@@ -193,6 +193,7 @@ nav ul li a:hover{
 	border: none;
 	background-color: rgb(34,177,76);
 	cursor: pointer;
+	border-radius: 3px;
 }
 @media screen and (max-width: 800px){
 	.navbar_togle{
@@ -328,6 +329,7 @@ nav ul li a:hover{
 	background-color: rgb(34,177,76);
 	padding-top: 50px;
 	padding-bottom: 50px;
+	margin-bottom: -50px;
 }
 .votre_image p{
 	font-size: 25px;
@@ -335,12 +337,14 @@ nav ul li a:hover{
 }
 .votre_image h1{
 	font-size: 35px;
+	padding-left: 20px;
+	padding-right: 20px;
 }
 /****** style_about_me ******/
 .tanone_e_patale_body_aboutme{
 	width: 80%;
 	margin: auto;
-	margin-top: 100px;
+	margin-top: 120px;
 	margin-bottom: 150px;
 }
 @media screen and (max-width: 1000px){
@@ -348,9 +352,21 @@ nav ul li a:hover{
 		width: 90%;
 	}
 }
+.citations{
+	font-family: georgian;
+	text-align: center;
+	font-style: italic;
+	font-size: 20px;
+	margin-top: 0;
+}
+.citations mark{
+	font-family: tahoma;
+	font-style: normal;
+	background-color: #ffffff;
+	font-weight: bold;
+}
 .tanone_e_patale_body_aboutme1{
-	justify-content: space-between;
-	display: flex;
+	
 }
 .tanone_e_patale_body_aboutme h1{
 	display: block;
@@ -358,12 +374,27 @@ nav ul li a:hover{
 	text-align: center;
 	margin-bottom: 30px;
 }
+.tanone_e_patale_body_aboutme h2{
+	font-size: 20px;
+}
 .tanone_e_patale_body_aboutme_photo{
-	width: 56%;
-	background-color: rgb(200,200,200);
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+}
+.tanone_e_patale_body_aboutme_photo_citation{
+	width: 50%;
+}
+.tanone_e_patale_body_aboutme_photo_citation p{
+	font-size: 60px;
+	font-style: italic;
+	margin: 10%;
+	text-align: center;
+	font-family: georgian;
 }
 .tanone_e_patale_body_aboutme_photo img{
-	width: 80%;
+	width: 50%;
+	margin: 0;
 }
 .aboutme_photo1{
 	float: right;
@@ -376,7 +407,7 @@ nav ul li a:hover{
 	margin: 3%;
 }
 .tanone_e_patale_body_aboutme_text{
-	width: 42%;
+	width: 100%;
 }
 .tanone_e_patale_body_aboutme_text .tanone_e_patale_body_aboutme_text_biographie{
 	color: rgba(0,0,0,0.7);
@@ -468,16 +499,39 @@ nav ul li a:hover{
 .tanone_e_patale_apropos_competance{
 	width: 80%;
 	margin: auto;
-	margin-top: -100px;
-	margin-bottom: 100px;
+	margin-top: -60px;
+	margin-bottom: 30px;
 }
 @media screen and (max-width: 1000px){
 	.tanone_e_patale_apropos_competance{
 		width: 90%;
 	}
 }
+.tanone_e_patale_apropos_competance h2{
+	font-size: 20px;
+}
+.tanone_e_patale_apropos_competance ul{
+	font-size: 22px;
+	list-style-type: none;
+}
+.tanone_e_patale_apropos_competance ul li{
+	margin-left: -40px;
+	margin-bottom: 15px;
+	display: flex;
+}
+.tanone_e_patale_apropos_competance ul li img{
+	width: 45px;
+	height: 45px;
+}
+.tanone_e_patale_apropos_competance ul li p{
+	width: 75%;
+	margin: 0;
+	margin-left: 2%;
+	padding-top: 7px;
+}
 .competence_html_css{
 	padding: 0;
+	margin-bottom: 50px;
 }
 .competence_html_css #html{
 	padding: 0;
@@ -505,7 +559,7 @@ nav ul li a:hover{
 	color: #ffffff;
 	background-color: rgb(0,0,240);
 	padding: 1%;
-	width: 75%;
+	width: 70%;
 }
 .competence_html_cssA #php a{
 	color: #ffffff;
@@ -537,6 +591,18 @@ nav ul li a:hover{
 	float: right;
 	text-decoration: none;
 }
+.competence_html_cssA #wordpress{
+	color: #ffffff;
+	background-color: rgb(22,41,24);
+	padding: 1%;
+	width: 90%;
+}
+.competence_html_cssA #wordpress a{
+	color: #ffffff;
+	background-color: rgb(22,41,24);
+	float: right;
+	text-decoration: none;
+}
 
 /****** style_tanone_e_patale_apropos_contact ******/
 .tanone_e_patale_apropos_contact{
@@ -550,9 +616,15 @@ nav ul li a:hover{
 	}
 }
 .tanone_e_patale_apropos_contact p{
-	text-align: center;
+	margin: 0;
 	font-size: 20px;
 	margin-bottom: 30px;
+	text-align: justify;
+	color: rgba(0,0,0,0.7);
+}
+.tanone_e_patale_apropos_contact p mark{
+	background-color: #ffffff;
+	font-weight: bold;
 }
 .tanone_e_patale_apropos_contact1{
 	display: block;
@@ -703,6 +775,11 @@ nav ul li a:hover{
 .article1_text{
 	width: 49%;
 }
+.article1_text mark{
+	background-color: #ffffff;
+	text-decoration: underline;
+	font-weight: bold;
+}
 .article1_text .titre_article{
 	text-align: left;
 	font-size: 35px;
@@ -760,8 +837,15 @@ article h2{
 article a{
 	text-decoration: none;
 }
-
-
+.reseaux_sociaux_article{
+	display: flex;
+	justify-content: space-between;
+	margin-top: 30px;
+	height: 40px;
+}
+.reseaux_sociaux_article img{
+	width: 30%;
+}
 
 
 /****** style_footer ******/
@@ -775,23 +859,23 @@ footer{
 	display: flex;
 	justify-content: space-between;
 	text-align: left;
-	margin-bottom: 10px;
-	padding-top: 5px;
+	margin-bottom: 15px;
 }
 .footer p{
-	font-size: 18px;
-	color: rgba(0,0,0,0.5);
 	margin: 0;
 }
 .menu_footer, .contact_footer, .reseaux_sociaux_footer{
 	width: 30%;
 	padding: 0;
+	margin-top: 20px;
 }
 .menu_footer h1, .contact_footer h1, .reseaux_sociaux_footer h1{
-	font-size: 18px;
-	border-left: 5px solid rgb(34,176,76);
+	border-left: 3px solid rgb(34,177,76);
 	padding-left: 5px;
 	margin: 0;
+	font-size: 15px;
+	margin-bottom: 20px;
+	margin-top: 10px;
 }
 .menu_footer ul{
 	list-style-type: none;
@@ -802,20 +886,22 @@ footer{
 	margin-left: -37px;
 }
 .menu_footer a{
-	color: rgba(0,0,0,0.5);
+	color: #000000;
 	text-decoration: none;
-	font-size: 20px;
 }
 footer .copyright{
-	color: rgb(255,255,255);
-	font-weight: bold;
-	border-top: 1px solid rgb(34,177,76);
-	padding-top: 20px;
-	padding-bottom: 20px;
+	background-color: rgb(34,177,76);
+	color: #ffffff;
+	padding: 15px;
 	margin: 0;
-	background-color: rgb(34,177,76);
 }
-footer p mark{
-	background-color: rgb(34,177,76);
-	color: rgb(255,255,255);
+.reseaux_sociaux_footer_img{
+	display: flex;
+	justify-content: space-between;
+	width: 40%;
+}
+.reseaux_sociaux_footer_img img{
+	width: 40px;
+	height: 40px;
+	border: 2px solid #000000;
 }
