--- a/style_responsive.css
+++ b/style_responsive.css
@@ -3,7 +3,7 @@
 	border: none;
 }
 .tanone_e_patale_blog{
-	margin-top: 50px;
+	margin-top: 22%;
 }
 .tanone_e_patale_blog h1{
 	font-size: 20px;
@@ -41,9 +41,9 @@ header .tanone_e_patale_header_logo{
 	margin-bottom: 1%;
 }
 .navbar_togle{
-	width: 26px;
-	height: 26px;
-	margin-top: 20%;
+	width: 25px;
+	height: 25px;
+	margin-top: 25%;
 }
 .hr{
 	display: none;
@@ -82,13 +82,18 @@ header .tanone_e_patale_header_logo{
 }
 .tanone_e_patale_body_aboutme{
 	margin-bottom: 50px;
-	margin-top: 80px;
+	margin-top: 140px;
+}
+@media screen and (max-width: 500px){
+	.tanone_e_patale_body_aboutme{
+		margin-top: 110px;
+	}
 }
 .aboutme_photo2{
 	display: block;
 }
 .tanone_e_patale_body_welcom{
-	margin-top: 110px;
+	margin-top: 140px;
 }
 .welcom_presentation_text{
 	width: 100%;
@@ -118,12 +123,14 @@ header .tanone_e_patale_header_logo{
 .photos237{
 	display: flex;
 	justify-content: space-around;
-	width: 660px;
+	width: 630px;
 	margin-top: 15px;
+	padding-left: 2.5%;
+	padding-right: 2.5%;
 }
 .photos237 img{
 	width: 200px;
-	height: 220px;
+	height: 250px;
 	border-radius: 15px;
 }
 #welcom_p22{
@@ -184,4 +191,21 @@ footer p{
 }
 .menu_footer, .contact_footer, .reseaux_sociaux_footer{
 	width: 100%;
+}
+.tanone_e_patale_body_aboutme_photo{
+	flex-direction: column;
+}
+.tanone_e_patale_body_aboutme_photo_citation{
+	width: 100%;
+	margin-bottom: 5%;
+}
+.tanone_e_patale_body_aboutme_photo_citation p{
+	font-size: 25px;
+	margin: 0;
+}
+.tanone_e_patale_body_aboutme_photo img{
+	width: 99%;
+}
+.votre_image{
+	margin-bottom: -80px;
 }
